--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
