--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stack-pulse/react-star-rating": "^1.0.1",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "axios": "^1.8.4",
@@ -18,9 +19,12 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "react-simple-star-rating": "^5.1.7",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
