--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
     "react-simple-star-rating": "^5.1.7",
+    "react-tabs": "^6.1.0",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
