--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "axios": "^1.8.4",
+    "firebase": "^11.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-rating": "^2.0.5",
