--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.5.0",
     "react-simple-star-rating": "^5.1.7",
     "react-tabs": "^6.1.0",
+    "sweetalert2": "^11.19.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
