--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@stack-pulse/react-star-rating": "^1.0.1",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.2",
     "axios": "^1.8.4",
@@ -29,7 +31,7 @@
     "react-router-dom": "^7.5.0",
     "react-simple-star-rating": "^5.1.7",
     "react-tabs": "^6.1.0",
-    "sweetalert2": "^11.19.1",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.3"
   },
